使用中文文件名

--- a/docs/note/backend/spring/springcloudalibaba-weifuwucongrumendaojinjie/小程序登陆.md
+++ b/docs/note/backend/spring/springcloudalibaba-weifuwucongrumendaojinjie/小程序登陆.md
@@ -11,3 +11,13 @@
 
 ## 二、微信配置
 1. 获取微信密钥openId
+
+
+## 整合WxJava
+功能包含 `小程序登陆` 、 `小程序支付` 等
+
+### 一、加依赖
+```java
+artigactId : weixin-java-miniapp
+3.5.0
+```banfa
